--- a/datacollector/datacollector_server/WebContent/secure/main-form.html
+++ b/datacollector/datacollector_server/WebContent/secure/main-form.html
@@ -3,32 +3,78 @@
 <head>
 	<meta charset="UTF-8">
 	<link href="/datacollector_server/css/jquery-ui.min.css" rel="stylesheet">
+	<link href="/datacollector_server/css/main-form.css" rel="stylesheet">
 	<script src="/datacollector_server/scripts/lib/jquery-2.1.3.min.js"></script>
 	<script src="/datacollector_server/scripts/lib/jquery-ui.min.js"></script>
+	<script src="/datacollector_server/scripts/lib/jquery.form.min.js"></script>
 	<script src="/datacollector_server/scripts/utils.js"></script>
 	<script src="/datacollector_server/scripts/main-form.js"></script>
-	<title>Empty page</title>
+	<title>Datacollector</title>
 </head>
 <body>
-	<div id="authorize_panel">
-		<div id="login_info_panel" style="display:block;">
-			<p id="login_info_user">Not logged in</p>
+<div id="authorize_panel" style="display: table; width: 300px; float: right;">
+		<div style="display: table-row;">
+			<div id="login_info_user" class="mf-table-cell-right">
+				Войдите в систему
+			</div>
 		</div>
-		<div id="login_panel" style="display:none;">
+		<div id="login_panel" style="display: table-row;">
 			<form id="login_form" action="j_security_check" method="POST">
-				<table cellpadding="3">
-					<tr><td>User name:</td><td><input type="text" name="j_username" /></td></tr>
-					<tr><td>Password:</td><td><input type="password" name="j_password" /></td></tr>
-					<tr><td></td><td><input id="login_button" type="submit" value="Login" /></td></tr>
-				</table>
+				<div style="display: table; width: 100%;">
+					<div style="display: table-row;">
+						<div class="mf-table-cell">
+							Логин:
+						</div>
+						<div class="mf-table-cell-right">
+							<input type="text" name="j_username" />
+						</div>
+					</div>
+					<div style="display: table-row;">
+						<div class="mf-table-cell">
+							Пароль:
+						</div>
+						<div class="mf-table-cell-right">
+							<input type="password" name="j_password" />
+						</div>
+					</div>
+					<div style="display: table-row;">
+						<div class="mf-table-cell">
+						</div>
+						<div class="mf-table-cell-right">
+							<input id="login_button" type="submit" value="Вход" />
+						</div>
+					</div>
+				</div>
 			</form>
 		</div>
-		<div id="logout_panel" style="display:block;">
-			<button id="logout_button">Logout</button>
+		<div id="logout_panel" style="display: table-row;">
+			<div class="mf-table-cell-right">
+				<button id="logout_button">Выход</button>
+			</div>
 		</div>
 	</div>
-	<div id="content_panel">
-		Empty page
+	<div id="content_panel" style="display: block; margin-right: 300px;">
+	
+		<!-- Upload dictionaries form -->
+		<div style="display: table;">
+			<div style="display: table-row;">
+				<div id="upload_dicts_label" class="mf-table-cell">
+					Загрузка справочников:
+				</div>
+				<form id="upload_dicts_form" action="/datacollector_server/secure/loadDataFromFile" method="POST" enctype="multipart/form-data">
+					<div class="mf-table-cell">
+						<input type="file" name="upload_dicts_file" id="upload_dicts_file" size="60" style="width: 350px;" />
+					</div>
+					<div class="mf-table-cell">
+						<input type="submit" id="upload_dicts_button" value="Загрузить" />
+					</div>
+				</form>
+			</div>
+		</div>
+		
+		<!-- Upload dictionaries status bar -->
+		<div id="status_label" style="padding: 5px;">
+		</div>
 	</div>
 </body>
 </html>
