--- a/site/vp_old.html
+++ b/site/vp_old.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<meta charset="utf8">
 <title>Впечатления участников ММБ</title>
 <style type="TEXT/CSS">
 TH {font-family: sans-serif; font-size:15px; background-color: #A0A0A0;}
